# APACAI-API

./: LICENSE  Makefile  README.md  chatml.md  pyproject.toml  setup.cfg
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
apacai/: __init__.py  _apacai_scripts.py  _openai_scripts.py  apacai_object.py  apacai_response.py  api_requestor.py  cli.py  embeddings_utils.py  error.py  object_classes.py  openai_object.py  openai_response.py  util.py  validators.py  wandb_logger.py
apacai/api_resources/: __init__.py  audio.py  chat_completion.py  completion.py  customer.py  deployment.py  edit.py  embedding.py  engine.py  error_object.py  file.py  fine_tune.py  image.py  model.py  moderation.py
apacai/api_resources/abstract/: __init__.py  (+7 more)
apacai/datalib/: __init__.py  common.py  numpy_helper.py  pandas_helper.py
apacai/tests/: test_api_requestor.py  test_endpoints.py  test_exceptions.py  test_file_cli.py  test_long_examples_validator.py  test_url_composition.py  test_util.py
examples/: README.md
examples/azure/: embeddings.ipynb  finetuning.ipynb
examples/codex/: backtranslation.py
examples/embeddings/: Classification.ipynb  Clustering.ipynb  Code_search.ipynb  Get_embeddings.ipynb  Obtain_dataset.ipynb  Recommendation.ipynb  Regression.ipynb  Semantic_text_search_using_embeddings.ipynb  User_and_product_embeddings.ipynb  Visualize_in_2d.ipynb  Visualize_in_3d.ipynb  Zero-shot_classification.ipynb
examples/finetuning/: answers_with_ft.py  finetuning-classification.ipynb  olympics-2-create-qa.ipynb
public/: Makefile  setup.py
(+3 files in other folders)
